apps/team3-matnani/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matnani-api
spec:
  template:
    spec:
      containers:
        - name: matnani-api
